tests/bits-param/too-few-bits.stderr
error[E0277]: the trait bound `False: FillsUnalignedBits` is not satisfied
 --> tests/bits-param/too-few-bits.rs:4:1
  |
4 | pub struct SignInteger {
  | ^^^ the trait `FillsUnalignedBits` is not implemented for `False`
  |
  = help: the trait `FillsUnalignedBits` is implemented for `True`
note: required by a bound in `CheckFillsUnalignedBits`
 --> src/private/checks.rs
  |
  | pub trait CheckFillsUnalignedBits
  |           ----------------------- required by a bound in this trait
  | where
  |     <Self::CheckType as DispatchTrueFalse>::Out: FillsUnalignedBits,
  |                                                  ^^^^^^^^^^^^^^^^^^ required by this bound in `CheckFillsUnalignedBits`
  = note: `CheckFillsUnalignedBits` is a "sealed trait", because to implement it you also need to implement `modular_bitfield::private::checks::FillsUnalignedBits`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following type implements the trait:
            modular_bitfield::private::checks::True

error[E0277]: the trait bound `False: FillsUnalignedBits` is not satisfied
 --> tests/bits-param/too-few-bits.rs:4:1
  |
4 | pub struct SignInteger {
  | ^^^ the trait `FillsUnalignedBits` is not implemented for `False`
  |
  = help: the trait `FillsUnalignedBits` is implemented for `True`
note: required by a bound in `CheckFillsUnalignedBits::CheckType`
 --> src/private/checks.rs
  |
  |     <Self::CheckType as DispatchTrueFalse>::Out: FillsUnalignedBits,
  |                                                  ^^^^^^^^^^^^^^^^^^ required by this bound in `CheckFillsUnalignedBits::CheckType`
  | {
  |     type CheckType: DispatchTrueFalse;
  |          --------- required by a bound in this associated type
